fixed layout on tablet/desktop

--- a/src/pages/auth/components/AuthForm.module.scss
+++ b/src/pages/auth/components/AuthForm.module.scss
@@ -4,7 +4,6 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1.5rem;
 
   &__input {
@@ -14,6 +13,10 @@
     border: none;
     border-radius: 4px;
     @include text-mixins.text-heading-sm-variant;
+
+    @media (min-width: 600px) {
+      width: 500px;
+    }
   }
 
   &__button {
